Fix not autosizing ruby elements issue.

RubyRun is inline-block. When inflate ruby, skip rubyRun and inflate all rubyRun's inner blocks.

BUG=688561

Review-Url: https://codereview.chromium.org/2683553002
Cr-Commit-Position: refs/heads/master@{#450897}

Former-commit-id: 082b073b26e5f408462e4fd1f229d7614ace4364